--- a/src/ui/ContactForm.form
+++ b/src/ui/ContactForm.form
@@ -32,7 +32,7 @@
           <text value="Telefone"/>
         </properties>
       </component>
-      <component id="954cc" class="javax.swing.JTextField" binding="textFieldTelefone">
+      <component id="954cc" class="javax.swing.JTextField" binding="textFieldTelephone">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
